# tasker

./: .gitignore  README.md  tasker.py
cpp/: CMakeLists.txt
cpp/algos/: CMakeLists.txt  common.h  selection_search.h
cpp/algos/01_find_sum_of_pair/: CMakeLists.txt  main.cpp
cpp/any/: CMakeLists.txt  any.h
cpp/tuple/: test.cpp  tuple.h  tuple_impl_1.h  tuple_impl_2.h
cpp/utils/: CMakeLists.txt  main.cpp  putils.h  strprint.h  test_putils.h
mods/: __init__.py  envvar.py  system_utils.py
pybind11/: .gitignore  CMakeInclude.cmake  CMakeLists.txt  README.md
pybind11/01_all_in_single_src/: CMakeLists.txt  pybind.cpp
pybind11/02_attach_existing_libs/: CMakeLists.txt  pb_cahello.cpp
pybind11/02_attach_existing_libs/add_lib/: CMakeLists.txt
pybind11/02_attach_existing_libs/add_lib/inc/: add.h
pybind11/02_attach_existing_libs/add_lib/src/: add.cpp
pybind11/02_attach_existing_libs/hello/: CMakeLists.txt
pybind11/02_attach_existing_libs/hello/priv/: hello.cpp
pybind11/02_attach_existing_libs/hello/pub/: hello.h
pybind11/02_attach_existing_libs/mul_lib/: CMakeLists.txt
pybind11/02_attach_existing_libs/mul_lib/inc/: mul.h
pybind11/02_attach_existing_libs/mul_lib/src/: mul.cpp
python/Linear-Systems/: README.md  line.py  linsys.py  plane.py  test_line.py  test_linsys.py  test_plane.py  test_vector.py  vector.py
python/Tasker/: .opt_example.json  .project  EnvVar.py  Interfaces.py  README.md  config.json  config_example.json  mod_imports.py  run_cmd.py  system_utils.py  tasker.json  tasker.py  utils.py  welcome.py  work_config.json
(+34 files in other folders)
